deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maaspal
  namespace: maaspal
spec:
  selector:
    app: maaspal
  ports:
    - port: 8000
      targetPort: 8000
